$Id$
            
            [- Version 2.1.43 -]
2008-12-14: base.lisp: Defined 'is-even' and 'is-odd' as synonyms for
              'evenp' and 'oddp'.

            [- Version 2.1.42 2008/11/25 20:03:28 airfoyle Exp -]
2008-11-25: base.lisp: Defined 'tuple.' as synonym for 'list*'.

            [- Version 2.1.41 2007/11/29 14:51:39 airfoyle Exp -]
2007-11-29: Moved 'print-innards' from chunk.lisp to util.lisp.

            [- Version 2.1.40 2007/08/28 18:14:57 airfoyle Exp -]
2007-08-28: ytload/ytfm.lmd, ytools.lmd: Improvements to the
              sequence of questions asked regarding bin directories.

            [- Version 2.1.39 2007/08/28 12:17:19 airfoyle Exp -]
2007-08-16: base.lisp: Fixed bug in 'build-symbol' whereby package arg
              was not evaluated!  (Manual was right, code wrong.)
              Defined 'endtail', a synonym for 'last' with args
              reversed.
            setter.lisp: Used end-tail to avoid using two-arg 'last'
              and causing problems in Nisp code.

            [- Version 2.1.37 -]
2007-06-29: datafun.lisp: Fixed unfoundedness due to implict use of 
            macro-hooks* before it is defined.

            [- Version 2.1.36 2007/06/23 14:52:45 airfoyle Exp -]
2007-06-23: datafun.lisp: Introduce "hooked macros" so the 'datafun'
            macros can all have hooks to be used by Nisp.

2007-06-19: misc.lisp, multilet.lisp: Moved 'datafun-match' from
            misc.lisp to multilet.lisp 

2007-06-16: datafun.lisp, misc.lisp: Added (datafun-match exp
            pattern -body-), which (a), at macro expansion time, makes
            sure, if the pattern begins with a symbol, that it begins
            with the right symbol and (b), at run time, signals a
            standard "Ill formed" error if the pattern doesn't match.

            setter.lisp: If (!=/ sym ...) finds that sym is unbound,
            it asks the user if the intention is really to set the
            symbol before proceeding.
