@@ -541,7 +541,7 @@
 	    (cons (make-Rep-var-prop 'init (caddr v) 2)
 		  (keyword-args->alist
 		     (cdddr v)
-		     '((:by by) (:to to) :then)
+		     '((:by by) (:to to) :then :fcn-name)
 		     :offset 4))))
       (let ((step (or (lookup-rep-var-prop ':by alist)
 		      (lookup-rep-var-prop ':to alist)))
@@ -558,12 +558,17 @@
 		      (error "Overconstrained 'repeat' var: ~s" v))
 		     ((= modecount 1)
 		      (cond (each-iter
-			     (make-Rep-var
-				'*each-iter
-				var
-				(cons (make-Rep-var-prop
-					 'iterfcnvar (gensym) -1)
-				      alist)))
+                             (let ((fcn-name
+                                      (let ((p (lookup-rep-var-prop
+                                                  ':fcn-name alist)))
+                                         (cond (p (Rep-var-prop-val p))
+                                               (t (gensym))))))
+			        (make-Rep-var
+                                   '*each-iter
+                                   var
+                                   (cons (make-Rep-var-prop
+                                            'iterfcnvar fcn-name -1)
+                                         alist))))
 			    (step
 			     (cond ((lookup-rep-var-prop ':to alist)
 				    (setq alist 
@@ -1086,7 +1091,13 @@
 				     ,@(cond (to `(:to ,(cadr to)))
 					     (t '())))))
 			     (*each-iter
-			      `(= ,(cadr init) :then :again))
+                              (let ((fcn-name (lookup-rep-var-prop
+                                                 ':fcn-name alist)))
+                                 `(= ,(cadr init) :then :again
+                                     ,@(cond (fcn-name
+                                              `(:fcn-name ,(Rep-var-prop-val
+                                                              fcn-name)))
+                                             (t '())))))
 			     (t
 			      (cond (init `(,(cadr init)))
 				    (t '()))))))))
